# wlr-glew-renderer

./: .gitignore  README.md  meson.build
include/: meson.build
include/render/: glew.h
include/wlr/render/: glew.h
src/: meson.build  pixel_format.c  renderer.c  shaders.c  texture.c
subprojects/: glew.wrap  wlroots.wrap
subprojects/packagefiles/glew-2.2.0/: meson.build
subprojects/packagefiles/wlroots/: meson.build
